# Cybersecurity-Swiss-Army-Knife

./: .gitignore  README.md  bootstrap.py  pyproject.toml
scripts/: run_slice3_demo.py  test_target.py  test_target_heavy.py  test_target_recurse.py
scripts/csak_plugins/: README.md  _linkfinder_runner.py  asnmap_demo.py  linkfinder.py
src/csak/: __main__.py
src/csak/cli/: collect.py  doctor.py  findings.py  ingest.py  main.py  org.py  path_setup.py  report.py  scan.py  target.py  tools.py
src/csak/collect/: __init__.py  detect.py  pipeline.py  plugins.py  recursion.py  router.py  runner.py  tool.py
src/csak/ingest/: __init__.py  dedup.py  nessus.py  nuclei.py  osquery.py  parser.py  pipeline.py  probe.py  scoring.py  targets.py  zeek.py
tests/: conftest.py  test_adaptive_rate_e2e.py  test_classify.py  test_cli_collect.py  test_cli_mutations.py  test_cli_org.py  test_cli_smoke.py  test_cli_tools.py  test_collect_pipeline.py  test_collect_tools.py  test_dedup.py  test_detect.py  test_doctor.py  test_end_to_end.py  test_extract_outputs.py  test_finding_id_prefix.py  test_nessus.py  test_nuclei.py  test_osquery.py  test_path_setup.py  test_plugins.py  test_probe.py  test_query_finders.py  test_recursion.py  test_render_docx.py  test_render_json.py  test_render_markdown.py  test_report_context.py  test_review_hardening.py  test_router.py  test_runner.py  test_schema_migration.py  test_scoring.py  test_storage.py  test_target_resolution.py  test_types_registry.py  test_zeek.py
tests/integration/: _synthetic_tool.py  harness.py  manifest.py
(+20 files in other folders)
