[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csak"
version = "0.1.0"
description = "Cybersecurity Swiss Army Knife — ingest, triage, and report on security tool output"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Eli Musselwhite"}]
license = {text = "MIT"}
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
csak = "csak.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
csak = ["templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
